# pyoptools

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: build.yaml
doc/: requirements.txt
src/pyoptools/gui/: ipynbplotutils.py  ipywidgets.py
src/pyoptools/misc/GS/: gs.py
src/pyoptools/misc/frft/: frft.py
src/pyoptools/misc/pmisc/: misc.py
src/pyoptools/paraxial/: systemp.py
src/pyoptools/raytrace/_comp_lib/: aspheric_lens.py  ccd.py  compound_lens.py  cube.py  cylindrical_lens.py  diffraction.py  prism.py  spherical_lens.py  stop.py
src/pyoptools/raytrace/calc/: calc.py
src/pyoptools/raytrace/mat_lib/: mat_eq.py  material.py
src/pyoptools/raytrace/surface/: poly_expansion.py
src/pyoptools/wavefront/calc/: gs.py
src/pyoptools/wavefront/zernike/: zernike.py
